--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,13 @@
     <script src="/js/initialize.js"></script>
 </head>
 <body>
-    
+  <h1>Budget Tracker</h1>
+  <nav class="header-nav">
+    <ul>
+      <li onClick="renderSignUp()">Sign Up</li>
+      <li onClick="renderLogin()">Login</li>
+    </ul>
+  </nav>
+  <main id="page" class="content"></main>
 </body>
 </html>
