pulling sign_up features from develop branch

--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,7 @@
 
     <!-- our functions -->
     <script src="/js/initialize.js"></script>
-    <script defer src="/js/components/sign_up.js"></script>
-    <script defer src="/js/components/edit_transaction.js"></script>
+    <script src="/js/components/login.js"></script>
 </head>
 <body>
   <h1>Budget Tracker</h1>
