pulling sign_up features from develop branch

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 
     <!-- our functions -->
     <script src="/js/initialize.js"></script>
+    <script src="/js/components/login.js"></script>
 </head>
 <body>
   <h1>Budget Tracker</h1>
