Got transaction list to show up in grid!

--- a/client/index.html
+++ b/client/index.html
@@ -26,38 +26,33 @@
   </nav>
   <main id="page" class="content">
     <section class="transaction-list">
-      <section class="transaction-list-description">
-        <p id="description-date">Date</p>
-        <p id="description-transaction">Transaction</p>
-      </section>
-      <section class="transaction-list-content">
-        <div class="transaction-items">
-          <!-- <p>${transaction.start_date}</p> -->
-          <!-- <p>${amountSign} $${transaction.amount} - ${transaction.name}</p> -->
-          <div class="item-date">
-            <p>20 Sep</p>
-          </div>
-          <div class="item-divider"></div>
-          <div class="item-header">
-            <p>- $300 - Rent</p>
-          </div>
-  
-          <div class="item-date">
-            <p>10 Sep</p>
-          </div>
-          <div class="item-divider"></div>
-          <div class="item-header">
-            <p>- $300 - Food Shopping</p>
-          </div>
-  
-          <div class="item-date">
-            <p>1 Sep</p>
-          </div>
-          <div class="item-header">
-            <p>+ $1200 - Salary</p>
-          </div>
-        </div>
-      </section>
+      <div class="description-date">Date</div>
+      <div class="description-transaction">Transaction</div>
+      <!-- <p>${transaction.start_date}</p> -->
+      <!-- <p>${amountSign} $${transaction.amount} - ${transaction.name}</p> -->
+      <div class="transaction-item-date">
+        <p>20 Sep</p>
+      </div>
+      <div class="transaction-item-divider">*</div>
+      <div class="transaction-item-header">
+        <p>- $300 - Rent</p>
+      </div>
+
+      <div class="transaction-item-date">
+        <p>10 Sep</p>
+      </div>
+      <div class="transaction-item-divider">*</div>
+      <div class="transaction-item-header">
+        <p>- $300 - Food Shopping</p>
+      </div>
+
+      <div class="transaction-item-date">
+        <p>1 Sep</p>
+      </div>
+      <div class="transaction-item-divider">*</div>
+      <div class="transaction-item-header">
+        <p>+ $1200 - Salary</p>
+      </div>
     </section>
   </main>
 </body>
