Transaction list now looks alright and shows up well

--- a/client/index.html
+++ b/client/index.html
@@ -26,32 +26,45 @@
   </nav>
   <main id="page" class="content">
     <section class="transaction-list">
-      <div class="description-date">Date</div>
-      <div class="description-transaction">Transaction</div>
+      <div class="title-date">Date</div>
+      <div class="title-transaction">Transaction</div>
       <!-- <p>${transaction.start_date}</p> -->
       <!-- <p>${amountSign} $${transaction.amount} - ${transaction.name}</p> -->
       <div class="transaction-item-date">
         <p>20 Sep</p>
       </div>
       <div class="transaction-item-divider">*</div>
-      <div class="transaction-item-header">
-        <p>- $300 - Rent</p>
+      <div class="transaction-item-info item-style-red">
+        <div class="info-title">
+          <h3>- $300 - Rent</h3>
+        </div>
+        <div class="info-content"></div>
       </div>
+
+      <div class="row-padding"></div>
 
       <div class="transaction-item-date">
         <p>10 Sep</p>
       </div>
       <div class="transaction-item-divider">*</div>
-      <div class="transaction-item-header">
-        <p>- $300 - Food Shopping</p>
+      <div class="transaction-item-info item-style-brown">
+        <div class="info-title">
+          <h3>- $300 - Food Shopping</h3>
+        </div>
+        <div class="info-content"></div>
       </div>
+
+      <div class="row-padding"></div>
 
       <div class="transaction-item-date">
         <p>1 Sep</p>
       </div>
       <div class="transaction-item-divider">*</div>
-      <div class="transaction-item-header">
-        <p>+ $1200 - Salary</p>
+      <div class="transaction-item-info item-style-blue">
+        <div class="info-title">
+          <h3>+ $1200 - Salary</h3>
+        </div>
+        <div class="info-content"></div>
       </div>
     </section>
   </main>
