--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,14 @@
 
     <!-- our functions -->
     <script src="/js/initialize.js"></script>
+    <script defer src="/js/components/sign_up.js"></script>
+    <script defer src="/js/components/edit_transaction.js"></script>
 </head>
 <body>
   <h1>Budget Tracker</h1>
   <nav class="header-nav">
     <ul>
+      <li onClick="renderEditTransaction()">Edit Transaction</li>
       <li onClick="renderSignUp()">Sign Up</li>
       <li onClick="renderLogin()">Login</li>
     </ul>
