added more styling to transaction list

--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
     <section class="transaction-list">
       <div class="title-date">Date</div>
       <div class="title-transaction">Transaction</div>
+      <div class="title-bar"></div>
       <!-- <p>${transaction.start_date}</p> -->
       <!-- <p>${amountSign} $${transaction.amount} - ${transaction.name}</p> -->
       <div class="transaction-item-date">
