started work to convert list layout from grid to flex

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,8 @@
     </ul>
   </nav>
   <main id="page" class="content">
+  <!-- In progress of converting grid into flex -->
+
     <section class="transaction-list">
       <div class="title-date">Date</div>
       <div class="title-transaction">Transaction</div>
