added transaction history and list to their component files

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/transaction_list.css">
 
     <!-- our functions -->
-    <script defer src="/js/initialize.js"></script>
+    <script src="/js/initialize.js"></script>
     <script defer src="/js/components/transaction_list.js"></script>
     <script defer src="/js/components/transaction_history.js"></script>
     <script defer src="/js/components/sign_up.js"></script>
@@ -31,90 +31,6 @@
       <li onClick="renderLogin()">Login</li>
     </ul>
   </nav>
-  <main id="page" class="content">
-    <!-- In progress of converting grid into flex -->
-    <h2>flex</h2>
-
-    <div class="transaction-list">
-      <div class="transaction-list-title">
-        <p class="title-date">DATE</p>
-        <p class="title-transaction">Transaction</p>
-      </div>
-      <div class="transaction-tracking-items">
-        <div class="tracked-item">
-          <div class="tracked-item-date">20 Sep</div>
-          <span class="tracked-item-divider"></span>
-          <div class="tracked-item-info item-style-red">
-            <div class="tracked-item-title">- $300 - Rent</div>
-            <div class="tracked-item-content"></div>
-          </div>
-        </div>
-
-        <div class="tracked-item">
-          <div class="tracked-item-date">10 Sep</div>
-          <span class="tracked-item-divider"></span>
-          <div class="tracked-item-info item-style-brown">
-            <div class="tracked-item-title">- $300 - Food Shopping</div>
-            <div class="tracked-item-content"></div>
-          </div>
-        </div>
-
-        <div class="tracked-item">
-          <div class="tracked-item-date">1 Sep</div>
-          <span class="tracked-item-divider"></span>
-          <div class="tracked-item-info item-style-blue">
-            <div class="tracked-item-title">+ $1200 - Salary</div>
-            <div class="tracked-item-content"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <h2>grid</h2>
-
-    <section class="grid-transaction-list">
-      <div class="grid-title-date">Date</div>
-      <div class="grid-title-transaction">Transaction</div>
-      <div class="grid-title-bar"></div>
-      <!-- <p>${transaction.start_date}</p> -->
-      <!-- <p>${amountSign} $${transaction.amount} - ${transaction.name}</p> -->
-      <div class="grid-transaction-item-date">
-        <p>20 Sep</p>
-      </div>
-      <div class="grid-transaction-item-divider">*</div>
-      <div class="grid-transaction-item-info item-style-red">
-        <div class="grid-info-title">
-          <h3>- $300 - Rent</h3>
-        </div>
-        <div class="grid-info-content"></div>
-      </div>
-
-      <div class="grid-row-padding"></div>
-
-      <div class="grid-transaction-item-date">
-        <p>10 Sep</p>
-      </div>
-      <div class="grid-transaction-item-divider">*</div>
-      <div class="grid-transaction-item-info item-style-brown">
-        <div class="grid-info-title">
-          <h3>- $300 - Food Shopping</h3>
-        </div>
-        <div class="grid-info-content"></div>
-      </div>
-
-      <div class="grid-row-padding"></div>
-
-      <div class="grid-transaction-item-date">
-        <p>1 Sep</p>
-      </div>
-      <div class="grid-transaction-item-divider">*</div>
-      <div class="grid-transaction-item-info item-style-blue">
-        <div class="grid-info-title">
-          <h3>+ $1200 - Salary</h3>
-        </div>
-        <div class="grid-info-content"></div>
-      </div>
-    </section>
-  </main>
+  <main id="page" class="content"></main>
 </body>
 </html>
