--- a/client/index.html
+++ b/client/index.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Budget Tracker</title>
+  <title>Budget Tracker</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/transaction_list.css">
+  <!-- Google Material Icons & Bootstrap -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,600,1,0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- our functions -->
-    <script src="/js/initialize.js"></script>
-    <script defer src="/js/components/transaction_list.js"></script>
-    <script defer src="/js/components/transaction_history.js"></script>
-    <script defer src="/js/components/sign_up.js"></script>
-    <script defer src="/js/components/login.js"></script>
-    <script defer src="/js/components/add_transaction.js"></script>
-    <script defer src="/js/components/overview.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <!-- Out CSS -->
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/landing_page.css">
+  <link rel="stylesheet" href="/css/user/login.css">
+  <link rel="stylesheet" href="/css/user/logout.css">
+  <link rel="stylesheet" href="/css/user/sign_up.css">
+  <link rel="stylesheet" href="/css/transaction/add.css">
+  <link rel="stylesheet" href="/css/transaction/edit.css">
+  <link rel="stylesheet" href="/css/transaction/history.css">
+  <link rel="stylesheet" href="/css/transaction/list.css">
+  <link rel="stylesheet" href="/css/transaction/manager.css">
+  <link rel="stylesheet" href="/css/transaction/overview.css">
 
+  <!-- our functions -->
+  <script src="/js/initialize.js"></script>
+  <script defer src="/js/components/user/login.js"></script>
+  <script defer src="/js/components/user/logout.js"></script>
+  <script defer src="/js/components/user/sign_up.js"></script>
+  <script defer src="/js/components/transaction/add.js"></script>
+  <script defer src="/js/components/transaction/edit.js"></script>
+  <script defer src="/js/components/transaction/history.js"></script>
+  <script defer src="/js/components/transaction/list.js"></script>
+  <script defer src="/js/components/transaction/manager.js"></script>
+  <script defer src="/js/components/transaction/overview.js"></script>
+  <script defer src="/js/components/nav.js"></script>
+
+  <!-- external functions -->
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Budget Tracker</h1>
   <nav class="header-nav">
     <ul>
-      <li onClick="renderAddTransaction()">Add Transaction</li>
-      <li onClick="renderTransactionHistory()">Transaction History</li>
-      <li onClick="renderEditTransaction()">Edit Transaction</li>
-      <li onClick="renderSignUp()">Sign Up</li>
-      <li onClick="renderLogin()">Login</li>
+      <li onclick="renderLandingPage()">Landing Page</li>
+      <li onclick="renderTransactionOverview()">Overview</li>
+      <li onclick="renderTransactionManager()">Manager</li>
+      <li onclick="renderTransactionHistory()">History</li>
+      <li onclick="renderTransactionAdd()">Add Transaction</li>
+      <li onclick="renderTransactionEdit()"><i>Edit Transaction (test)</i></li>
+      <li onclick="renderTransactionListManager()"><i>List Transactions - Manager (test)</i></li>
+      <li onclick="renderTransactionListHistory()"><i>List Transactions - History (test)</i></li>
+      <li onclick="renderUserSignUp()">Sign Up</li>
+      <li onclick="renderUserLogin()">Login</li>
+      <li onclick="invokeUserLogout()">Logout</li>
     </ul>
   </nav>
   <main id="page" class="content"></main>
