--- a/client/index.html
+++ b/client/index.html
@@ -54,9 +54,9 @@
       <li onclick="renderTransactionEdit()"><i>Edit Transaction (test)</i></li>
       <li onclick="renderTransactionListManager()"><i>List Transactions - Manager (test)</i></li>
       <li onclick="renderTransactionListHistory()"><i>List Transactions - History (test)</i></li>
-      <li onclick="renderUserSignUp()">Sign Up</li>
-      <li onclick="renderUserLogin()">Login</li>
-      <li onclick="invokeUserLogout()">Logout</li>
+      <li onclick="renderSignUp()">Sign Up</li>
+      <li onclick="renderLogin()">Login</li>
+      <li id="logoutBtn" onclick="invokeUserLogout()">Logout</li>
     </ul>
   </nav>
   <main id="page" class="content"></main>
