stable-ish for main

--- a/client/index.html
+++ b/client/index.html
@@ -52,8 +52,8 @@
       <li onclick="renderTransactionHistory()">History</li>
       <li onclick="renderTransactionAdd()">Add Transaction</li>
       <li onclick="renderTransactionEdit()"><i>Edit Transaction (test)</i></li>
-      <li onclick="renderTransactionListManager()"><i>List Transactions - Manager (test)</i></li>
-      <li onclick="renderTransactionListHistory()"><i>List Transactions - History (test)</i></li>
+      <li onclick="renderList('manager')"><i>List Transactions - Manager (test)</i></li>
+      <li onclick="renderList('history')"><i>List Transactions - History (test)</i></li>
       <li onclick="renderSignUp()">Sign Up</li>
       <li onclick="renderLogin()">Login</li>
       <li id="logoutBtn" onclick="invokeUserLogout()">Logout</li>
