moved landing page render onto its own file and added loggedInUsername

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
   <script defer src="/js/components/transaction/manager.js"></script>
   <script defer src="/js/components/transaction/overview.js"></script>
   <script defer src="/js/components/nav.js"></script>
+  <script defer src="/js/components/landing_page.js"></script>
 
   <!-- external functions -->
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
