--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,15 @@
 
   <title>Budget Tracker</title>
 
-  <!-- Google Material Icons & Bootstrap -->
+  <!-- favicon -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+
+  <!-- Google Material Icons + Bootstrap + Google fonts-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
 
   <!-- Out CSS -->
   <link rel="stylesheet" href="/css/main.css">
