temp commented out nav bar

--- a/client/index.html
+++ b/client/index.html
@@ -61,5 +61,12 @@
     </ul>
   </nav>
   <main id="page" class="content"></main>
+
+  <!-- add a footer here, putting all our names here -->
+  <!--
+  <footer>
+    <p>Made with &hearts; in Adelaide. Made by... </p>
+    <p>Work is proected under the MIT Licence &copy; 2022</p>
+  </footer> -->
 </body>
 </html>
