started working on bootstrap sticky nav but it is like a mobile menu bwahahah

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
   <script defer src="/js/components/transaction/manager.js"></script>
   <script defer src="/js/components/transaction/overview.js"></script>
   <script defer src="/js/components/nav.js"></script>
+  <script defer src="/js/components/mobile_nav.js"></script>
   <script defer src="/js/components/landing_page.js"></script>
 
   <!-- external functions -->
@@ -61,6 +62,10 @@
     </ul>
   </nav>
   <main id="page" class="content"></main>
-  <div class="mobile-nav"></div>
+  <div id="mobile-nav" class="sticky-nav navbar fixed-bottom navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Fixed bottom</a>
+    </div>
+  </div>
 </body>
 </html>
