--- a/client/index.html
+++ b/client/index.html
@@ -54,13 +54,7 @@
   <header id="nav">
   </header>
   <main id="page" class="content"></main>
-  <div id="mobile-nav" class="sticky-nav navbar fixed-bottom navbar-dark">
-    <div class="container-fluid">
-      <div class="col navbar-text sticky-nav-text" onclick="renderTransactionOverview()">Overview</div>
-      <div class="col navbar-text sticky-nav-text" onclick="renderTransactionManager()">Manager</div>
-      <div class="col navbar-text sticky-nav-text" onclick="renderTransactionHistory()">History</div>
-    </div>
-  </div>
+  <div id="mobile-nav" class="navbar fixed-bottom navbar-dark"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous" ></script>
 </body>
 </html>
