--- a/client/index.html
+++ b/client/index.html
@@ -32,8 +32,11 @@
   <link rel="stylesheet" href="/css/transaction/manager.css">
   <link rel="stylesheet" href="/css/transaction/overview.css">
 
-  <!-- our functions -->
+  <!-- initialize -->
   <script src="/js/initialize.js"></script>
+  <!-- external functions -->
+  <script defer type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <!-- our functions -->
   <script defer src="/js/components/user/login.js"></script>
   <script defer src="/js/components/user/logout.js"></script>
   <script defer src="/js/components/user/sign_up.js"></script>
@@ -46,9 +49,6 @@
   <script defer src="/js/components/nav.js"></script>
   <script defer src="/js/components/mobile_nav.js"></script>
   <script defer src="/js/components/landing_page.js"></script>
-
-  <!-- external functions -->
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
   <header id="nav">
@@ -56,5 +56,6 @@
   <main id="page" class="content"></main>
   <div id="mobile-nav" class="navbar fixed-bottom navbar-dark"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous" ></script>
+  <script defer src="/js/initialize_deffered.js"></script>
 </body>
 </html>
