--- a/client/index.html
+++ b/client/index.html
@@ -51,10 +51,17 @@
   <script defer src="/js/components/landing_page.js"></script>
 </head>
 <body>
-  <header id="nav">
-  </header>
-  <main id="page" class="content"></main>
+  <div id="main-page" class="fixed-top">
+    <header id="nav"></header>
+    <main id="page" class="content"></main>
+    <footer>
+      <p>Made with &hearts; in Adelaide</p>
+      <p>Created by <a href="https://github.com/angelalicareer">Angela Li</a>, <a href="https://github.com/kateyvonnenow">Kate Kearsley</a>, <a href="https://github.com/shkshitiz">Kshitiz Shrestha</a>, and <a href="https://github.com/Titus-Huang">Titus Huang</a></p>
+      <p>&copy; 2022, General Assembly SEiR 61, MIT Licence</p>
+    </footer>
+  </div>
   <div id="mobile-nav" class="navbar fixed-bottom navbar-dark"></div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous" ></script>
   <script defer src="/js/initialize_deffered.js"></script>
 </body>
