--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <!-- Meta Tags -->
+  <meta name="title" content="Budget Tracker">
+  <meta name="description" content="Tracking your budget in a simple and intuitive fashion. A group project for SEiR 61 class (Project 3 - Team Hackathon)">
+  <meta name="keywords" content="budget, tracker, webapp">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="Angela Li, Kate Kearsley, Kshitiz Shrestha, Titus Huang">
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Budget Tracker</title>
+  <!-- Page Title -->
+  <title>Budget Tracker - Project 3 for SEiR 61</title>
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Budget Tracker - Project 3 for SEiR 61">
+  <meta name="description" content="Tracking your budget in a simple and intuitive fashion. A group project for SEiR 61 class (Project 3 - Team Hackathon) from General Assembly Australia.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="/">
+  <meta property="og:title" content="Budget Tracker - Project 3 for SEiR 61">
+  <meta property="og:description" content="Tracking your budget in a simple and intuitive fashion. A group project for SEiR 61 class (Project 3 - Team Hackathon) from General Assembly Australia.">
+  <meta property="og:image" content="https://seir61-budget-tracker-titus.herokuapp.com/images/social_meta.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="/">
+  <meta property="twitter:title" content="Budget Tracker - Project 3 for SEiR 61">
+  <meta property="twitter:description" content="Tracking your budget in a simple and intuitive fashion. A group project for SEiR 61 class (Project 3 - Team Hackathon) from General Assembly Australia.">
+  <meta property="twitter:image" content="https://seir61-budget-tracker-titus.herokuapp.com/images/social_meta.png">
 
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="/images/favicon.png">
